...
        }
    }

    private var timeFlowConfiguration: some View {
        Section {
            Button(action: timeFlow.addItem) {
                Text("Add item")
            }

            NavigationLink {
                Form {
                    Section("Name") {
                        TextField("Name", text: $timeFlow.name)
...
